<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GGGithub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="required_field">can not be null!!!</string>



    <!-- value for the phone mode menu -->
    <string name="bbn_phone_view_behavior" translatable="false" tools:ignore="UnusedResources">yincheng.gggithub.library.materialbottomnavigation.BottomBehavior</string>

    <!-- behavior for the tablet mode menu -->
    <string name="bbn_tablet_view_behavior" translatable="false" tools:ignore="UnusedResources">yincheng.gggithub.library.materialbottomnavigation.TabletBehavior</string>

    <!-- this is the default value -->
    <string name="bbn_default_view_behavior" translatable="false" tools:ignore="UnusedResources">yincheng.gggithub.library.materialbottomnavigation.BottomBehavior</string>

    <!-- default badge provider -->
    <string name="bbn_badgeProvider" translatable="false" tools:ignore="UnusedResources">yincheng.gggithub.library.materialbottomnavigation.BadgeProvider</string>

    <!-- default floating action button behavior -->
    <string name="bbn_fab_default_behavior" translatable="false" tools:ignore="UnusedResources">yincheng.gggithub.library.materialbottomnavigation.FloatingActionButtonBehavior</string>
    <string name="categories">Category</string>
    <string name="stared">stared</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>
    <string name="search_result_warning">Too many responses \\nShowing the max API allows</string>
    <string name="search_key_size_required">最少2个字</string>
    <string name="no_data">no data</string>
    <string name="reload">reload</string>
    <string name="loading">loading...</string>
    <string name="filter_repository">repositories</string>
    <string name="filter_user">users</string>
    <string name="filter_issue">issues</string>
    <string name="filter_code">code</string>
</resources>
