<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    app:bbn_itemAnimationDuration="200"
    app:bbn_itemColorActive="@color/colorPrimary"
    app:bbn_itemColorInactive="?android:textColorTertiary"
    app:bbn_rippleColor="@color/transparent">

    <item
        android:id="@+id/categories"
        android:contentDescription="@string/categories"
        android:icon="@drawable/ic_view_category_black_48dp"
        android:title="@string/categories" />

    <item
        android:id="@+id/stared"
        android:contentDescription="@string/stared"
        android:icon="@drawable/ic_star_black_48dp"
        android:title="@string/stared" />

    <item
        android:id="@+id/trending"
        android:contentDescription="@string/trending"
        android:icon="@drawable/ic_trending_up_black_48dp"
        android:title="@string/trending" />
    <item
        android:id="@+id/profile"
        android:contentDescription="@string/profile"
        android:icon="@drawable/ic_person_black_48dp"
        android:title="@string/profile" />

</menu>