<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/activity_search">

    <RadioGroup
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:orientation="horizontal">

        <!--<yincheng.gggithub.view.widget.FilterRadioButton-->
        <!--android:id="@+id/filter_repository"-->
        <!--style="@style/filter_radiobutton"-->
        <!--android:text="@string/filter_repository" />-->

        <!--<yincheng.gggithub.view.widget.FilterRadioButton-->
        <!--android:id="@+id/filter_user"-->
        <!--style="@style/filter_radiobutton"-->
        <!--android:text="@string/filter_user" />-->

        <!--<yincheng.gggithub.view.widget.FilterRadioButton-->
        <!--android:id="@+id/filter_issue"-->
        <!--style="@style/filter_radiobutton"-->
        <!--android:text="@string/filter_issue" />-->

        <!--<yincheng.gggithub.view.widget.FilterRadioButton-->
        <!--android:id="@+id/filter_code"-->
        <!--style="@style/filter_radiobutton"-->
        <!--android:text="@string/filter_code" />-->

        <RadioButton
            android:id="@+id/filter_repository"
            style="@style/filter_radiobutton"
            android:text="@string/filter_repository" />

        <RadioButton
            android:id="@+id/filter_user"
            style="@style/filter_radiobutton"
            android:text="@string/filter_user" />

        <RadioButton
            android:id="@+id/filter_issue"
            style="@style/filter_radiobutton"
            android:text="@string/filter_issue" />

        <RadioButton
            android:id="@+id/filter_code"
            style="@style/filter_radiobutton"
            android:text="@string/filter_code" />
    </RadioGroup>
</LinearLayout>